# rte_demo

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: rte.sdkconfig.cmake  rte.vars.cmake
cmake/arch/x86-64/: rte_vars.cmake
cmake/execc_env/linuxapp/: rte_vars.cmake
cmake/machine/native/: rte_vars.cmake
cmake/toolchain/gcc/: rte_toolchain_compat.cmake  rte_vars.cmake
config/: common_base  common_linuxapp  deconfig_x86_64-native-linuxapp-gcc
example/test_run/: CMakeLists.txt  main.c  slave.c
lib/: CMakeLists.txt  rte_config.h
lib/cmake/arch/native-linuxapp/: rte_vars.cmake
lib/cmake/arch/x86-64/: rte_vars.cmake
lib/cmake/toolchain/gcc/: rte_toolchain_compat.cmake
lib/common/: eal_common_cpuflags.c  eal_common_lcore.c  eal_common_log.c  eal_common_memory.c  eal_common_memzone.c  eal_common_options.c  eal_common_thread.c  eal_filesystem.h  eal_internal_cfg.h  eal_options.h  eal_private.h  eal_thread.h  malloc_elem.h  rte_malloc.c
lib/common/include/: rte_eal.h  rte_lcore.h  rte_log.h  rte_malloc.h  rte_memory.h  rte_memzone.h
lib/common/include/arch/x86/: rte_cycles.h
lib/librte_eal/: CMakeLists.txt
lib/librte_eal/common/: eal_common_log.c  eal_common_options.c  eal_common_tailqs.c  eal_filesystem.h  eal_options.h  eal_private.h  malloc_elem.c  malloc_heap.c  rte_dev.h  rte_malloc.c
lib/librte_eal/common/include/: rte_eal.h  rte_log.h  rte_memory.h  rte_memzone.h  rte_version.h
lib/librte_eal/common/include/generic/: rte_atomic.h
lib/librte_eal/linuxapp/eal/: eal.c  eal_memory.c  eal_thread.c
lib/librte_mempool/: CMakeLists.txt  rte_mempool.c  rte_mempool.h  rte_mempool_ops.c
lib/librte_ring/: CMakeLists.txt  rte_ring.c  test.txt
lib/linuxapp/eal/: eal.c  eal_hugepage_info.c  eal_log.c  eal_memory.c  eal_thread.c
script/: gen-config-h.sh
unitest/: CMakeLists.txt  process.h  rte_random.h  tst_atomic.cc  tst_barrier.cc  tst_debug.cc  tst_eal.c  tst_log.cc  tst_malloc.cc  tst_malloc_master.cc  tst_malloc_slave.cc  tst_memcpy.cc  tst_memcpy_perf.cc  tst_memory.cc  tst_mempool.cc  tst_mempool_perf.cc  tst_memzone.cc  tst_ring.cc  tst_ring_multiprocess.c  tst_ring_multiprocess.cc  tst_version.cc
