cmake_minimum_required(VERSION 3.10)
project(rte_demo)
include_directories(${CMAKE_CURRENT_LIST_DIR}/common)
include_directories(${CMAKE_CURRENT_LIST_DIR}/common/arch/x86)
include_directories(${CMAKE_CURRENT_LIST_DIR}/common/include/arch/x86)
include_directories(${CMAKE_CURRENT_LIST_DIR}/common/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/driver)
include_directories(${CMAKE_CURRENT_LIST_DIR}/)
include_directories(${CMAKE_CURRENT_LIST_DIR}/librte_mempool)
include_directories(${CMAKE_CURRENT_LIST_DIR}/linuxapp)
include_directories(${CMAKE_CURRENT_LIST_DIR}/librte_ring)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/common common)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/driver driver)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/librte_ring rte_ring)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/librte_mempool rte_mempool)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/linuxapp linuxapp)
add_library(rte_demo STATIC ${driver} ${common} ${rte_ring} ${rte_mempool} ${linuxapp})