cmake_minimum_required(VERSION 3.10)
project(rte_demo)
add_compile_options(-mssse3)
add_compile_options(-O0)
add_compile_options(-g)
include_directories(${CMAKE_CURRENT_LIST_DIR}/common)
include_directories(${CMAKE_CURRENT_LIST_DIR}/common/arch/x86)
include_directories(${CMAKE_CURRENT_LIST_DIR}/common/include/arch/x86)
include_directories(${CMAKE_CURRENT_LIST_DIR}/common/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/driver)
include_directories(${CMAKE_CURRENT_LIST_DIR}/)
include_directories(${CMAKE_CURRENT_LIST_DIR}/librte_mempool)
include_directories(${CMAKE_CURRENT_LIST_DIR}/linuxapp)
include_directories(${CMAKE_CURRENT_LIST_DIR}/librte_ring)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/common common)
aux_source_directory(${CMAEK_CURRENT_LIST_DIR}/common/arch/x86 arch)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/driver/ring driver)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/librte_ring rte_ring)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/librte_mempool rte_mempool)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/linuxapp/eal linuxapp)
add_library(rte_demo SHARED ${driver} ${common} ${rte_ring} ${rte_mempool} ${linuxapp} ${arch} /home/james/work/rte_demo/lib/common/arch/x86/rte_cpuflags.c)
target_link_libraries(rte_demo PRIVATE numa pthread)