cmake_minimum_required(VERSION 3.10)
project(main_demo)
add_compile_options(-O0)
add_compile_options(-g)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../../lib/common)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../../lib/common/arch/x86)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../../lib/common/include/arch/x86)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../../lib/common/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../../lib/driver)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../../lib/)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../../lib/librte_mempool)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../../lib/linuxapp)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../../lib/librte_ring)
add_executable(main main.c)
add_executable(slave slave.c)
target_link_directories(main PUBLIC /home/james/work/rte_demo/lib/build)
target_link_libraries(main PUBLIC rte_demo)
target_link_libraries(main PRIVATE pthread numa)

target_link_directories(slave PUBLIC /home/james/work/rte_demo/lib/build)
target_link_libraries(slave PUBLIC rte_demo)
target_link_libraries(slave PRIVATE pthread numa)